# routes/generated-gleece.go
@@ -5,7 +5,7 @@ It includes routes and handlers by the Gleece API Routes Generator.
 --
 Authors: Haim Kastner & Yuval Pomerchik
 Generated by: Gleece Routes Generator
-Generated Date: 2025-03-23
+Generated Date: 2025-03-27
 Target Engine: Gin (https://github.com/gin-gonic/gin)
 --
 Usage:
@@ -28,7 +28,7 @@ import (
 	"github.com/gopher-fleece/runtime"
 	RequestAuth "github.com/haimkastner/go-api-units-example/security"
 	UnitsControllerImport "github.com/haimkastner/go-api-units-example/controllers"
-	Param0useUnit "github.com/haimkastner/unitsnet-go/units"
+	Param0responseQuantity "github.com/haimkastner/unitsnet-go/units"
 	Param1data "github.com/haimkastner/unitsnet-go/units"
 	// import extension placeholder
 )
@@ -290,16 +290,16 @@ func RegisterRoutes(engine *gin.Engine) {
 		controller := UnitsControllerImport.UnitsController{}
 		controller.InitController(ctx)
 		var conversionErr error
-		var useUnitRawPtr *Param0useUnit.LengthUnits = nil
-		useUnitRaw, isuseUnitExists := ctx.GetQuery("useUnit")
-		if isuseUnitExists {
-			useUnit := useUnitRaw
-			switch useUnitRaw {
+		var responseQuantityRawPtr *Param0responseQuantity.LengthUnits = nil
+		responseQuantityRaw, isresponseQuantityExists := ctx.GetQuery("responseQuantity")
+		if isresponseQuantityExists {
+			responseQuantity := responseQuantityRaw
+			switch responseQuantityRaw {
 			case "Angstrom", "AstronomicalUnit", "Centimeter", "Chain", "DataMile", "Decameter", "Decimeter", "DtpPica", "DtpPoint", "Fathom", "Femtometer", "Foot", "Gigameter", "Hand", "Hectometer", "Inch", "Kilofoot", "KilolightYear", "Kilometer", "Kiloparsec", "Kiloyard", "LightYear", "MegalightYear", "Megameter", "Megaparsec", "Meter", "Microinch", "Micrometer", "Mil", "Mile", "Millimeter", "Nanometer", "NauticalMile", "Parsec", "Picometer", "PrinterPica", "PrinterPoint", "Shackle", "SolarRadius", "Twip", "UsSurveyFoot", "Yard":
-				useUnitVar := Param0useUnit.LengthUnits(useUnit)
-				useUnitRawPtr = &useUnitVar
+				responseQuantityVar := Param0responseQuantity.LengthUnits(responseQuantity)
+				responseQuantityRawPtr = &responseQuantityVar
 			default:
-				conversionErr := fmt.Errorf("useUnit must be one of \"Angstrom, AstronomicalUnit, Centimeter, Chain, DataMile, Decameter, Decimeter, DtpPica, DtpPoint, Fathom, Femtometer, Foot, Gigameter, Hand, Hectometer, Inch, Kilofoot, KilolightYear, Kilometer, Kiloparsec, Kiloyard, LightYear, MegalightYear, Megameter, Megaparsec, Meter, Microinch, Micrometer, Mil, Mile, Millimeter, Nanometer, NauticalMile, Parsec, Picometer, PrinterPica, PrinterPoint, Shackle, SolarRadius, Twip, UsSurveyFoot, Yard\" options only but got %s", useUnitRaw)
+				conversionErr := fmt.Errorf("responseQuantity must be one of \"Angstrom, AstronomicalUnit, Centimeter, Chain, DataMile, Decameter, Decimeter, DtpPica, DtpPoint, Fathom, Femtometer, Foot, Gigameter, Hand, Hectometer, Inch, Kilofoot, KilolightYear, Kilometer, Kiloparsec, Kiloyard, LightYear, MegalightYear, Megameter, Megaparsec, Meter, Microinch, Micrometer, Mil, Mile, Millimeter, Nanometer, NauticalMile, Parsec, Picometer, PrinterPica, PrinterPoint, Shackle, SolarRadius, Twip, UsSurveyFoot, Yard\" options only but got %s", responseQuantityRaw)
 				// Middlewares onInputValidationMiddlewares section
 				for _, middleware := range onInputValidationMiddlewares {
 					if continueOperation := middleware(ctx, conversionErr); !continueOperation {
@@ -311,9 +311,9 @@ func RegisterRoutes(engine *gin.Engine) {
 					Type: http.StatusText(http.StatusUnprocessableEntity),
 					Detail: fmt.Sprintf(
 						"A request was made to operation 'TestUnit' but parameter '%s' was not properly sent - Expected %s but got %s",
-						"useUnit",
+						"responseQuantity",
 						"LengthUnits",
-						reflect.TypeOf(useUnitRaw).String(),
+						reflect.TypeOf(responseQuantityRaw).String(),
 					),
 					Status:     http.StatusUnprocessableEntity,
 					Instance:   "/gleece/validation/error/TestUnit",
@@ -357,7 +357,7 @@ func RegisterRoutes(engine *gin.Engine) {
 		}
 		// End middlewares beforeOperationMiddlewares section
 		// before operation routes extension placeholder
-		value, opError := controller.TestUnit(useUnitRawPtr, *dataRawPtr)
+		value, opError := controller.TestUnit(responseQuantityRawPtr, *dataRawPtr)
 		for key, value := range controller.GetHeaders() {
 			ctx.Header(key, value)
 		}
